Fix navbar on mobile.

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -147,6 +147,7 @@ body
       width: 450px
 
 #promotional
+  width: 100%
   .promotional-content
     img
       width: 100.5%
@@ -343,6 +344,8 @@ footer
         width: 100%
         .navbar-brand
           margin-left: 0
+      #search-bar
+        float: none !important
 
   #promotional
     .promotional-content
